--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple chat app</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Simple Chat App with Firebase's Firestore</h1>
+    <ul id="messages"></ul>
+    <form id="form" action="">
+        <input type="text" id="input-text" autocomplete="off" />
+        <input type="submit" value="Send" />
+    </form>
+    <script src="index.js"></script>
 </body>
 </html>
