feat: real time communication with firebase on the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple chat app</title>
     <link rel="stylesheet" href="index.css">
+    <script type="module">
+
+      </script>
 </head>
+
 <body>
     <h1>Simple Chat App with Firebase's Firestore</h1>
     <ul id="messages"></ul>
@@ -13,6 +18,7 @@
         <input type="text" id="input-text" autocomplete="off" />
         <input type="submit" value="Send" />
     </form>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
+
 </html>
